--- a/NLW Origin/style.css
+++ b/NLW Origin/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   text-decoration: none;
 }
@@ -16,6 +20,7 @@ img {
 
 /*VARIAVEIS*/
 :root {
+  --header-height: 4.5rem;
   /* colors */
   --hue: 159;
   /* HSL color mode */
@@ -36,7 +41,7 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+.title {
   font: 700 1.875rem 'Poppins', sans-serif;
   color: var(--title-color);
   -webkit-font-smoothing: auto;
@@ -71,14 +76,99 @@ h1 {
 
 #header {
   border-bottom: 1px solid #e4e4e4;
+  margin-bottom: 2rem;
+  display: flex;
+
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background: var(--body-color);
 }
 
+/*NAVIGATION*/
+
 nav {
-  height: 4.5rem;
+  width: 100%;
+  height: var(--header-height);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
+nav ul li {
+  text-align: center;
+}
+
+nav ul li a {
+  transition: color 0.2s;
+  position: relative;
+}
+
+nav ul li a:hover {
+  color: var(--base-color);
+}
+
+nav ul li a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--base-color);
+  position: absolute;
+  left: 0;
+  bottom: -1.5rem;
+  transition: width 0.2s;
+}
+
+nav ul li a:hover::after {
+  width: 100%;
+}
+
+nav .menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
+nav.show .menu {
+  opacity: 1;
+  visibility: visible;
+  background: var(--body-color);
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+nav.show .menu {
+  display: grid;
+  place-content: center;
+}
+
+nav.show ul.grid {
+  gap: 4rem;
+}
+
+/*TOGGLE MENU*/
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  right: 1.5rem;
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+
+/*LOGO*/
 
 .logo {
   font: 700 1.31rem 'Poppins', sans-serif;
@@ -89,8 +179,11 @@ nav {
   color: var(--base-color);
 }
 
+main {
+  margin-top: calc(var(--header-height) + 2rem);
+}
+
 .container {
-  width: 100%;
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -105,6 +198,10 @@ nav {
 }
 
 /*HOME*/
+
+#home {
+  overflow: hidden;
+}
 
 #home .container {
   margin: 0;
@@ -145,4 +242,5 @@ nav {
 
 #home .text p {
   margin-bottom: 2rem;
+  max-width: 100%;
 }
