--- a/Discover/reactapp/src/styles/global.css
+++ b/Discover/reactapp/src/styles/global.css
@@ -3,3 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body,
+input,
+button {
+  font-size: 16px;
+  font-family: 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
