--- a/Discover/reactapp/src/pages/Home/style.css
+++ b/Discover/reactapp/src/pages/Home/style.css
@@ -4,9 +4,24 @@
   flex-direction: column;
 }
 
-.container h1 {
+.container header {
   margin: 84px 0 24px;
-  font-size: 2rem;
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container header img {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  margin-left: 7px;
+}
+
+.container header div {
+  display: flex;
+  align-items: center;
 }
 
 .container input {
